--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,19 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+logs
+*.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+pids
+*.pid
+*.seed
+*.pid.lock
+node_modules/
+jspm_packages/
+*.tsbuildinfo
+.npm
+.eslintcache
+.stylelintcache
+.env
+.env.test
+.env.production
+dist/
+build/
