--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev": "vite",
     "eslint": "npx eslint .",
     "eslint:fix": "npx eslint --fix .",
-    "lint": "run-s -c eslint prettier",
-    "lint:fix": "run-s -c eslint:fix prettier",
+    "lint": "run-s -c eslint stylelint prettier",
+    "lint:fix": "run-s -c eslint:fix stylelint:fix prettier",
     "prepare": "husky",
     "prettier": "npx prettier . --write",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "stylelint": "npx stylelint -o \"stylelint.log\" \"**/*.css\"",
+    "stylelint:fix": "npx stylelint -o \"stylelint.log\" --fix \"**/*.css\""
   },
   "dependencies": {
     "react": "^19.2.3",
@@ -45,6 +47,8 @@
     "lint-staged": "^16.2.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.8.1",
+    "stylelint": "^17.0.0",
+    "stylelint-config-standard": "^40.0.0",
     "typescript-eslint": "^8.53.1",
     "vite": "npm:rolldown-vite@latest"
   },
